Add auto-forward feature.   Configurable in the settings screen.   The TalkingWebView gains onReadToBottom and onUserInteraction callbacks.   On finishing reading an article, we skip to the next unless the user   has interacted with the app in the last 15secs.   We read at most 15 articles in a rwo without user interaction,   just so we don't continue forever. Also bump version.

--- a/talkingrss/res/xml/prefs.xml
+++ b/talkingrss/res/xml/prefs.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
-        xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android">
         
+  <CheckBoxPreference
+    android:key="auto_forward"
+    android:title="@string/auto_forward_pref_title"
+    android:summaryOn="@string/auto_forward_pref_summary_on"
+    android:summaryOff="@string/auto_forward_pref_summary_off"
+    android:defaultValue="false"/>
+
         <ListPreference
                 android:key="rate_pref"
                 android:title="Speech Rate"
