Accept the SEARCH button as equivalent to CALL (for phones that have it. Add an on-screen soft button to toggle pause / play at the bottom center of the screen. That space was previously used to show a star icon: TODO: find some other place to show that, for now it's just removed. TalkingWebView.Callback interface gains an onTalking() method to support swaping the button image and text. Bump required SDK version to 3: I think I'm using APIs that require it, and I'm not in a position to test older.

--- a/talkingrss/res/layout/article_view.xml
+++ b/talkingrss/res/layout/article_view.xml
@@ -37,13 +37,13 @@ limitations under the License.
             android:drawableLeft="@drawable/ic_menu_back"
             android:text="@string/art_prev"
         />
-        <LinearLayout android:id="@+id/mid_icons"
-            android:orientation="horizontal"
+        <Button android:id="@+id/pause_btn"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            >
-        </LinearLayout>
+            android:drawableTop="@drawable/ic_media_pause"
+            android:text="@string/pause"
+        />
         <Button android:id="@+id/art_next"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
