--- a/trunk/talkingrss/res/layout/list_item.xml
+++ b/trunk/talkingrss/res/layout/list_item.xml
@@ -19,4 +19,6 @@ limitations under the License.
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceLarge"
+    android:paddingTop="5dip"
+    android:paddingBottom="5dip"
 />
